--- a/style.css
+++ b/style.css
@@ -6,3 +6,34 @@
   border-radius: 0px;
   cursor: pointer;
 }
+
+table, td {
+  border: 1px solid gray;
+  background: white;
+  padding: 5px 15px;
+  margin: 10px 10px;
+}
+
+h2{
+  margin: 10px 10px;
+}
+
+.contenedor {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+.tabla{
+  gap: 5px 10px;
+  gap: 5px;
+}
+
+.playerController{
+    margin: 5px 5px;
+}
+
+.videoPlayer{
+  margin-left: 10px;
+  margin-top: 10px;
+}
