--- a/style.css
+++ b/style.css
@@ -1,27 +1,39 @@
-#rngTransport {
-  width: 100%;
-  height: 25px;
-  background: #d3d3d3;
-  outline: none;
-  border-radius: 0px;
-  cursor: pointer;
+body{
+  background: radial-gradient(circle, rgba(20,40,129,1) 22%, rgba(1,8,37,1) 97%);
+}
+
+label{
+  color: white;
+  vertical-align: middle;
+}
+
+p{
+  color:white;
 }
 
 table, td {
-  border: 1px solid gray;
-  background: white;
+  border: 1px solid white;
+  background: rgba(255,255,255,.1);
   padding: 5px 15px;
   margin: 10px 10px;
+  color: white;
 }
 
 h2{
+  color: white;
+  text-shadow: 10px black;
   margin: 10px 10px;
+}
+
+input{
+  vertical-align: middle;
 }
 
 .contenedor {
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
+  margin-left: 20px;
 }
 
 .tabla{
@@ -30,10 +42,31 @@ h2{
 }
 
 .playerController{
-    margin: 5px 5px;
+  color: white;
+  margin: 5px 5px;
 }
 
 .videoPlayer{
   margin-left: 10px;
   margin-top: 10px;
+}
+
+.btn{
+  width: 70px;
+}
+
+#pTime {
+  align-items: center;
+  font-weight: bold;
+  padding: 10px 10px;
+  width: 100px;
+}
+
+#rngTransport {
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  border-radius: 0px;
+  cursor: pointer;
 }
